Compiler/tests/typing2/good/testfile-borrow-2.rs

fn foo(x: & i32) { }
fn main() { let mut x = 42; foo(&mut x); }
